@@ -16,14 +16,14 @@ Check that you have the recent version of
 <a href="http://cr.yp.to/daemontools.html">daemontools</a> installed.
 <p>
 Download
-<a href="socklog-0.6.1.tar.gz">socklog-0.6.1.tar.gz</a> into
+<a href="socklog-0.6.4.tar.gz">socklog-0.6.4.tar.gz</a> into
 <tt>/package</tt> and unpack the archive
 <pre>
   # cd /package
-  # gunzip socklog-0.6.1.tar
-  # tar -xpf socklog-0.6.1.tar
-  # rm socklog-0.6.1.tar
-  # cd admin/socklog-0.6.1
+  # gunzip socklog-0.6.4.tar
+  # tar -xpf socklog-0.6.4.tar
+  # rm socklog-0.6.4.tar
+  # cd admin/socklog-0.6.4
 </pre>
 On solaris, edit the top of <tt>src/Makefile</tt>, add <tt>-DSOLARIS</tt>
 to <tt>CFLAGS</tt> and <tt>-lsocket -lnsl -ldoor -lthread</tt> to
